fix: Fix background overflow bug in festival game start page on web

--- a/styles/game/festival/Test.module.scss
+++ b/styles/game/festival/Test.module.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   padding: 80px 30px 0 30px;
   border: 8px solid rgba(139, 133, 205, 0.24);
