--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,10 +31,17 @@ body {
   background-color: #eee;
 }
 
+html {
+  display: flex;
+  flex-direction: column;
+}
+
 body {
   max-width: 480px;
+  width: 100%;
   min-height: 100vh;
-  margin: 0 auto;
+  align-self: center;
+  display: block;
   background-color: #fff;
 }
 
